--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,16 @@ flex-wrap: wrap;
     justify-content: space-between;
 }
 
+.hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
