--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,26 +1,90 @@
-.search-form {
-    position:fixed;
-    
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
     
 }
+
+form {
+    position: relative;
+    width: 300px;
+    margin: 0 auto;
+}
+
+.searchField {
+    position:fixed;
+    background: lightskyblue;
+    width:100%;
+    padding: 10px 0
+}
+
+.searchField input {
+    width: 100%;
+    height: 42px;
+    padding-left: 10px;
+    border: 2px solid lightskyblue;
+    border-radius: 5px;
+    outline: none;
+    background: #F9F0DA;
+    color: #9E9C9C;
+}
+
+.searchField button {
+    position: absolute;
+    top: 0;
+    right: 0px;
+    width: 42px;
+    height: 42px;
+    border: none;
+    background: #7BA7AB;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+.searchField button:before {
+    content: "\1F50E";
+    font-family: FontAwesome;
+    font-size: 16px;
+    color: #F9F0DA;
+}
+
 
 .gallery {
-display: flex;
-flex-wrap: wrap;
-
-
+    display: grid;
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    padding-top:80px;
 }
-.photo-card {
-    margin: 15px;
-    border: 1px solid grey;
-    
-}
+
 .photo-card > img {
     display: block;
+    max-width:100%;
+    border-radius: 5px 5px 0 0;
+    
 }
+
 .info {
     display: flex;
     justify-content: space-between;
+    padding:20px;
+    border: 1px solid lightgray;
+}
+.info-item {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.load-more {
+    display: block;
+    background-color: lightskyblue;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 20px auto;
 }
 
 .hidden {
@@ -35,4 +99,5 @@ flex-wrap: wrap;
     clip-path: inset(50%);
     margin: -1px;
 }
+
 
